fix: text wrap and script adcence

--- a/app/main/components/gallery/components/categoryList/CategoryList.module.css
+++ b/app/main/components/gallery/components/categoryList/CategoryList.module.css
@@ -64,6 +64,7 @@
 .info p {
   font-weight: 700;
   font-size: 0.8rem;
+  text-wrap: auto;
 }
 
 
